Fixes to hero image distortion on load

--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_content.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_content.scss
@@ -255,11 +255,17 @@ figure {
 // apply to figure
 .figure-container img {
 	width: 100%;
-	height: 100%;
+	// height: 100%;
 	object-fit: cover;
 	position: absolute;
 	z-index: 1;
-	display: block; // added to stop flexbox messing with the height on load.
+	// added below to stop flexbox messing with the height on load.
+	display: block;
+	top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: auto;
+    width: 100%;
 }
 
 // apply to content inside
